# crawler

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
examples/: crawl_demo.py  demo.py  example_config.yaml  full_demo.py  parse_demo.py  polite_demo.py  resilient_demo.py  storage_demo.py
src/crawler/: __init__.py  _utils.py  advanced.py  cli.py  client.py  concurrency.py  config.py  errors.py  logging_setup.py  parser.py  queue.py  rate_limiter.py  retry.py  robots.py  sitemap.py  stats.py  storage.py
tests/: test_advanced.py  test_circuit.py  test_client.py  test_concurrency.py  test_config.py  test_crawl.py  test_errors.py  test_parser.py  test_queue.py  test_rate_limiter.py  test_retry.py  test_robots.py  test_sitemap.py  test_stats.py  test_storage.py  test_utils.py
