[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "crawler"
version = "0.1.0"
description = "Asynchronous web crawler."
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "aiofiles>=23.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
